--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "popper.js": "^1.12.9",
     "query-string": "^5.0.1",
     "react": "^16.0.0",
+    "react-ace": "^5.9.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-split-pane": "^0.1.77",
     "webpack-dev-server": "^2.9.2"
   }
 }
