--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js",
-    "dev": "node_modules/.bin/webpack-dev-server --host 0.0.0.0 --port 8080"
+    "start": "webpack-dev-server --mode development --open --host $IP --port $PORT",
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
@@ -21,8 +20,9 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.2"
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.1.0"
   },
   "babel": {
     "presets": [
@@ -41,9 +41,10 @@
     "react": "^16.0.0",
     "react-ace": "^5.9.0",
     "react-dom": "^16.0.0",
+    "react-flux-dash": "^1.0.3",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-split-pane": "^0.1.77",
-    "webpack-dev-server": "^2.9.2"
+    "wordpress-rest-api": "^0.8.0"
   }
 }
