--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
+    "dotenv-webpack": "^1.5.5",
     "events": "^1.1.1",
     "flux": "^3.1.3",
     "jquery": "^3.2.1",
