--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --host $IP --port $PORT",
+    "startc9": "webpack-dev-server --mode development --open --host $IP --port $PORT",
     "build": "webpack --mode production"
   },
   "author": "",
@@ -22,6 +22,9 @@
     "style-loader": "^0.19.0",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
+    "dotenv-webpack": "^1.5.5",
+    "html-loader": "^0.5.5",
+    "markdown-loader": "^2.0.2",
     "webpack-dev-server": "^3.1.0"
   },
   "babel": {
@@ -31,18 +34,24 @@
     ]
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.4",
+    "@fortawesome/fontawesome-free-regular": "^5.0.8",
+    "@fortawesome/fontawesome-free-solid": "^5.0.8",
     "bootstrap": "^4.0.0-beta.2",
-    "dotenv-webpack": "^1.5.5",
     "events": "^1.1.1",
     "flux": "^3.1.3",
     "jquery": "^3.2.1",
     "moment": "^2.19.4",
     "popper.js": "^1.12.9",
+    "prop-types": "^15.6.1",
     "query-string": "^5.0.1",
     "react": "^16.0.0",
     "react-ace": "^5.9.0",
     "react-dom": "^16.0.0",
-    "react-flux-dash": "^1.0.3",
+    "react-flux-dash": "^1.1.5",
+    "react-marked": "^0.3.1",
+    "react-mousetrap": "^0.2.0",
+    "react-polyfills": "0.0.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-split-pane": "^0.1.77",
