--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "startc9": "webpack-dev-server --mode development --open --host $IP --port $PORT",
+    "c9": "webpack-dev-server --mode development --open --host $IP --port $PORT",
     "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@breathecode/breathecode-cli": "0.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -35,7 +36,9 @@
     ]
   },
   "dependencies": {
+    "@4geeksacademy/react-flux-dash": "^1.1.9",
     "@fortawesome/fontawesome": "^1.1.4",
+    "@fortawesome/fontawesome-free-brands": "^5.0.9",
     "@fortawesome/fontawesome-free-regular": "^5.0.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.8",
     "bootstrap": "^4.0.0-beta.2",
@@ -57,6 +60,7 @@
     "react-router-dom": "^4.2.2",
     "react-split-pane": "^0.1.77",
     "reactstrap": "^5.0.0-beta.3",
+    "validator": "^9.4.1",
     "wordpress-rest-api": "^0.8.0"
   }
 }
