first production test

--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ Thumbs.db
 node_modules/
 
 # ignore the dist directory were our bundle files are going to be
-public/*
+dist/
 
 !.gitkeep
 !.htaccess
