--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "c9": "webpack-dev-server --mode development --open --host $IP --port $PORT",
-    "build": "webpack --mode production"
+    "c9": "webpack-dev-server --mode development --open --host $IP --port $PORT --config webpack.dev.js",
+    "dev": "webpack --mode development --config webpack.dev.js",
+    "build": "webpack --mode production --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
@@ -27,7 +28,8 @@
     "style-loader": "^0.19.0",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-dev-server": "^3.1.0",
+    "webpack-merge": "^4.1.2"
   },
   "babel": {
     "presets": [
