ready to production

--- a/.gitignore
+++ b/.gitignore
@@ -54,5 +54,8 @@ node_modules/
 # ignore the dist directory were our bundle files are going to be
 dist/
 
+# ignore the testing server
+server.js
+
 !.gitkeep
 !.htaccess
