--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-split-pane": "^0.1.77",
+    "react-transition-group": "^1.2.1",
     "reactstrap": "^5.0.0-beta.3",
     "validator": "^9.4.1",
     "wordpress-rest-api": "^0.8.0"
