--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "workspace",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "dotenv-webpack": "^1.5.5",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "markdown-loader": "^2.0.2",
     "node-sass": "^4.5.3",
     "react-svg-loader": "^2.1.0",
@@ -39,6 +40,7 @@
   },
   "dependencies": {
     "@4geeksacademy/react-flux-dash": "^1.1.9",
+    "@breathecode/api-js-wrapper": "git+https://github.com/breatheco-de/api-javascript-wrapper.git",
     "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/fontawesome-free-brands": "^5.0.9",
     "@fortawesome/fontawesome-free-regular": "^5.0.8",
