--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "workspace",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "c9": "webpack-dev-server --mode development --open --host $IP --port $PORT --config webpack.dev.js",
     "dev": "webpack --mode development --config webpack.dev.js",
+    "run": "http-server -a $IP",
     "build": "webpack --mode development --config webpack.prod.js"
   },
   "author": "",
@@ -23,13 +24,13 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "markdown-loader": "^2.0.2",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.8.3",
     "react-svg-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
-    "webpack": "^4.0.1",
+    "webpack": "^4.6.0",
     "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.1.0",
+    "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.2"
   },
   "babel": {
