--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "c9": "webpack-dev-server --mode development --open --host $IP --port $PORT --config webpack.dev.js",
     "dev": "webpack --mode development --config webpack.dev.js",
-    "run": "http-server -a $IP",
+    "start": "http-server -a $IP",
     "build": "webpack --mode development --config webpack.prod.js"
   },
   "author": "",
