--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "popper.js": "^1.12.9",
     "prop-types": "^15.6.1",
     "query-string": "^5.0.1",
+    "raven-js": "^3.24.2",
     "react": "^16.0.0",
     "react-ace": "^5.9.0",
     "react-dom": "^16.0.0",
