--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "workspace",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "c9": "webpack-dev-server --mode development --open --host $IP --port $PORT --config webpack.dev.js",
-    "dev": "webpack --mode development --config webpack.dev.js",
+    "c9": "webpack-dev-server --open --host $IP --port $PORT --config webpack.dev.js",
+    "dev": "webpack --config webpack.dev.js",
     "start": "http-server -a $IP",
-    "build": "webpack --mode development --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@breathecode/breathecode-cli": "0.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -28,10 +27,10 @@
     "react-svg-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.1.3",
-    "webpack-merge": "^4.1.2"
+    "webpack": "^4.16.4",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-merge": "^4.1.4"
   },
   "babel": {
     "presets": [
@@ -40,33 +39,31 @@
     ]
   },
   "dependencies": {
-    "@4geeksacademy/react-flux-dash": "^3.0.0",
-    "@breathecode/api-js-wrapper": "^1.0.1",
+    "@4geeksacademy/react-flux-dash": "^3.0.2",
+    "@breathecode/api-js-wrapper": "^1.0.6",
     "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/fontawesome-free-brands": "^5.0.9",
     "@fortawesome/fontawesome-free-regular": "^5.0.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.8",
-    "bootstrap": "^4.0.0-beta.2",
+    "bc-react-session": "^1.0.83",
+    "bootstrap": "^4.1.3",
     "events": "^1.1.1",
     "flux": "^3.1.3",
-    "jquery": "^3.2.1",
     "moment": "^2.19.4",
-    "popper.js": "^1.12.9",
     "prop-types": "^15.6.1",
     "query-string": "^5.0.1",
     "raven-js": "^3.24.2",
-    "react": "^16.0.0",
+    "react": "^16.4.2",
     "react-ace": "^5.9.0",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.4.2",
     "react-flux-dash": "^1.1.6",
     "react-marked": "^0.3.1",
     "react-mousetrap": "^0.2.0",
     "react-polyfills": "0.0.1",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-split-pane": "^0.1.77",
     "react-transition-group": "^1.2.1",
-    "reactstrap": "^5.0.0-beta.3",
     "validator": "^9.4.1",
     "wordpress-rest-api": "^0.8.0"
   }
