--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.9",
     "@fortawesome/fontawesome-free-regular": "^5.0.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.8",
-    "bc-react-session": "^1.0.83",
+    "bc-react-notifier": "^1.1.0",
+    "bc-react-session": "^1.5.0",
     "bootstrap": "^4.1.3",
     "events": "^1.1.1",
     "flux": "^3.1.3",
