--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "workspace",
-  "version": "1.1.3",
+  "version": "1.1.31",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
     "markdown-loader": "^2.0.2",
     "node-sass": "^4.8.3",
     "react-svg-loader": "^2.1.0",
@@ -58,6 +59,7 @@
     "react-ace": "^5.9.0",
     "react-dom": "^16.4.2",
     "react-flux-dash": "^1.1.6",
+    "react-joyride": "^2.0.0-15",
     "react-marked": "^0.3.1",
     "react-mousetrap": "^0.2.0",
     "react-polyfills": "0.0.1",
