--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "c9": "webpack-dev-server --open --host $IP --port $PORT --config webpack.dev.js",
+    "c9": "webpack-dev-server --host $IP --port $PORT --config webpack.dev.js",
+    "gitpod": "webpack-dev-server --host 0.0.0.0 --port 3000 --config webpack.dev.js",
     "dev": "webpack --config webpack.dev.js",
     "start": "http-server -a $IP",
     "build": "webpack --config webpack.prod.js"
@@ -24,13 +25,13 @@
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "markdown-loader": "^2.0.2",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.11.0",
     "react-svg-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^4.16.4",
     "webpack-cli": "^2.1.5",
-    "webpack-dev-server": "^3.1.5",
+    "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.1.4"
   },
   "babel": {
@@ -46,8 +47,8 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.9",
     "@fortawesome/fontawesome-free-regular": "^5.0.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.8",
-    "bc-react-notifier": "^1.1.0",
-    "bc-react-session": "^1.5.1",
+    "bc-react-notifier": "^1.1.6",
+    "bc-react-session": "^1.5.2",
     "bootstrap": "^4.1.3",
     "events": "^1.1.1",
     "flux": "^3.1.3",
