--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js",
-    "dev": "webpack --config webpack.dev.js",
+    "start:prod": "webpack-dev-server --config webpack.prod.js",
     "build": "webpack --config webpack.prod.js"
   },
   "author": "",
