--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ node_modules/
 # ignore the dist directory were our bundle files are going to be
 dist/
 public/
+!public/.htaccess
 
 # ignore the testing server
 server.js
