added teacher.breatheco.de as alias for managing dns

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,5 +2,7 @@ ports:
     - port: 8080
       onOpen: open-browser
 tasks:
-    - init: npm install;
+    - init: >
+        npm install;
+        npm i now -g;
       command: npm run start;
