--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --config webpack.dev.js",
     "start:prod": "webpack-dev-server --config webpack.prod.js",
     "build": "webpack --config webpack.prod.js",
-    "now-build":"webpack --config webpack.prod.js"
+    "now-build": "webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,19 +17,19 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^2.1.1",
     "dotenv-webpack": "^1.5.5",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
-    "markdown-loader": "^2.0.2",
+    "markdown-loader": "^5.0.0",
     "node-sass": "^4.11.0",
-    "react-svg-loader": "^2.1.0",
+    "react-svg-loader": "^3.0.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^4.16.4",
-    "webpack-cli": "^2.1.5",
+    "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.1.4"
   },
@@ -48,7 +48,7 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.8",
     "bc-react-notifier": "^1.1.6",
     "bc-react-session": "^1.5.2",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "events": "^1.1.1",
     "flux": "^3.1.3",
     "moment": "^2.19.4",
@@ -59,6 +59,7 @@
     "react-ace": "^5.9.0",
     "react-dom": "^16.4.2",
     "react-flux-dash": "^1.1.6",
+    "react-gtm-module": "^2.0.4",
     "react-joyride": "^2.0.0-15",
     "react-marked": "^0.3.1",
     "react-mousetrap": "^0.2.0",
