--- a/.env.dev
+++ b/.env.dev
@@ -7,7 +7,11 @@ ENVIRONMENT=development
 DEBUG=true
 CMS_URL=https://breatheco.de
 CMS_NEW_URL=https://content.breatheco.de
-API_URL=https://talenttree-alesanchezr.c9users.io
 
-ASSETS_URL=https://assets-alesanchezr.c9users.io
-REPLIT_URL=https://assets-alesanchezr.c9users.io/apps/replit?r=
+//API_URL=https://talenttree-alesanchezr.c9users.io
+//ASSETS_URL=https://assets-alesanchezr.c9users.io
+//REPLIT_URL=https://assets-alesanchezr.c9users.io/apps/replit?r=
+
+API_URL=https://api.breatheco.de
+ASSETS_URL=https://assets.breatheco.de
+REPLIT_URL=https://assets.breatheco.de/apps/replit?r=
