--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
-    "markdown-loader": "^5.0.0",
+    "markdown-loader": "^5.1.0",
     "node-sass": "^4.11.0",
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^6.0.6",
@@ -64,6 +64,7 @@
     "react-marked": "^0.3.1",
     "react-mousetrap": "^0.2.0",
     "react-polyfills": "0.0.1",
+    "react-popover": "^0.5.10",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-split-pane": "^0.1.77",
