migrated to the new api

--- a/.env_dev
+++ b/.env_dev
@@ -10,8 +10,8 @@ CMS_NEW_URL=https://content.breatheco.de
 
 //API_URL=https://talenttree-alesanchezr.c9users.io
 //ASSETS_URL=https://assets-alesanchezr.c9users.io
-//REPLIT_URL=https://assets-alesanchezr.c9users.io/apps/replit?r=
+//EXERCISE_URL=https://assets-alesanchezr.c9users.io/apps/replit?r=
 
-API_URL=https://api.breatheco.de
+API_URL=https://8000-e7f7c9f7-d9b4-41e7-9e9e-c5399f297d9a.ws-us03.gitpod.io
 ASSETS_URL=https://assets.breatheco.de
-REPLIT_URL=https://assets.breatheco.de/apps/replit?r=
+EXERCISE_URL=https://assets.breatheco.de/apps/replit?r=
