--- a/.env_prod
+++ b/.env_prod
@@ -6,6 +6,7 @@ ENVIRONMENT=production
 CMS_URL=https://breatheco.de
 CMS_NEW_URL=https://content.breatheco.de
 
-API_URL=https://breathecode.herokuapp.com
+//API_URL=https://breathecode.herokuapp.com
+API_URL=https://8000-e7f7c9f7-d9b4-41e7-9e9e-c5399f297d9a.ws-us03.gitpod.io
 ASSETS_URL=https://assets.breatheco.de
 EXERCISE_URL=https://assets.breatheco.de/apps/replit?r=
