sync student tasks

--- a/.env_dev
+++ b/.env_dev
@@ -12,7 +12,7 @@ CMS_NEW_URL=https://content.breatheco.de
 //ASSETS_URL=https://assets-alesanchezr.c9users.io
 //EXERCISE_URL=https://assets-alesanchezr.c9users.io/apps/replit?r=
 
-API_URL=https://8000-e7f7c9f7-d9b4-41e7-9e9e-c5399f297d9a.ws-us03.gitpod.io
-//API_URL=https://breathecode.herokuapp.com
+//API_URL=https://8000-e7f7c9f7-d9b4-41e7-9e9e-c5399f297d9a.ws-us03.gitpod.io
+API_URL=https://breathecode.herokuapp.com
 ASSETS_URL=https://assets.breatheco.de
 EXERCISE_URL=https://assets.breatheco.de/apps/replit?r=
