--- a/.env_dev
+++ b/.env_dev
@@ -15,4 +15,5 @@ CMS_NEW_URL=https://content.breatheco.de
 //API_URL=https://8000-e7f7c9f7-d9b4-41e7-9e9e-c5399f297d9a.ws-us03.gitpod.io
 API_URL=https://breathecode.herokuapp.com
 ASSETS_URL=https://assets.breatheco.de
+LEARNPACK_URL=https://learnpack.herokuapp.com
 EXERCISE_URL=https://assets.breatheco.de/apps/replit?r=
