--- a/.env_prod
+++ b/.env_prod
@@ -6,7 +6,8 @@ ENVIRONMENT=production
 CMS_URL=https://breatheco.de
 CMS_NEW_URL=https://content.breatheco.de
 
-API_URL=https://breathecode.herokuapp.com
+API_URL=https://breathecode-syllabus.herokuapp.com
+; API_URL=https://breathecode.herokuapp.combreathecode.herokuapp.com
 //API_URL=https://8000-b748e395-8aa2-4f7e-bfc5-0b7234f4f182.ws-us03.gitpod.io
 ASSETS_URL=https://assets.breatheco.de
 LEARNPACK_URL=https://learnpack.herokuapp.com
