change .env file

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,7 @@
 
 # track this file .gitignore (i.e. do NOT ignore it)
 !.gitignore
-!.env.dev
-!.env_dev
-!.env.prod
-!.env_prod
+!.env.example
 !.gitpod.yml
 php_errorlog
 .log
